--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "bootstrap": "^5.2.3",
         "bootstrap-icons": "^1.13.1",
         "concurrently": "^9.0.1",
+        "laravel-datatables-vite": "^0.6.2",
         "laravel-vite-plugin": "^2.0.0",
         "sass": "^1.56.1",
         "tailwindcss": "^4.0.0",
@@ -20,6 +21,9 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^7.1.0",
-        "jquery": "^3.7.1"
+        "datatables.net-bs5": "^2.3.5",
+        "jquery": "^3.7.1",
+        "jszip": "^3.10.1",
+        "pdfmake": "^0.2.20"
     }
 }
